# ChangeLog for dev-python/qscintilla-python
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/ChangeLog,v 1.82 2012/03/04 17:29:14 hwoarang Exp $

*qscintilla-python-2.6.1 (04 Mar 2012)

  04 Mar 2012; Markos Chandras <hwoarang@gentoo.org>
  +qscintilla-python-2.6.1.ebuild:
  version bump

  27 Feb 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Add <upstream> tag to metadata.

  27 Feb 2012; Patrick Lauer <patrick@gentoo.org>
  qscintilla-python-2.4.5.ebuild, qscintilla-python-2.4.6.ebuild,
  qscintilla-python-2.5.1.ebuild, qscintilla-python-2.6.ebuild:
  Restricting pypy

*qscintilla-python-2.6 (12 Nov 2011)

  12 Nov 2011; Markos Chandras <hwoarang@gentoo.org>
  +qscintilla-python-2.6.ebuild:
  version bump

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  qscintilla-python-2.5.1.ebuild:
  ppc/ppc64 stable wrt #374591

  21 Jul 2011; Markus Meier <maekke@gentoo.org> qscintilla-python-2.5.1.ebuild:
  x86 stable, bug #374591

  10 Jul 2011; Markos Chandras <hwoarang@gentoo.org>
  qscintilla-python-2.5.1.ebuild:
  Stable on amd64 wrt bug #374591

*qscintilla-python-2.5.1 (26 Apr 2011)

  26 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +qscintilla-python-2.5.1.ebuild,
  +files/qscintilla-python-2.5.1-disable_stripping.patch:
  Version bump.

  16 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  qscintilla-python-2.4.5.ebuild:
  ppc64 stable wrt #349607

  27 Feb 2011; Raúl Porcel <armin76@gentoo.org>
  qscintilla-python-2.4.5.ebuild:
  ia64/sparc stable wrt #349607

  27 Feb 2011; Tobias Klausmann <klausman@gentoo.org>
  qscintilla-python-2.4.5.ebuild:
  Stable on alpha, bug #349607

  16 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  qscintilla-python-2.4.5.ebuild:
  x86 stable wrt bug #349607

  07 Jan 2011; Brent Baude <ranger@gentoo.org>
  qscintilla-python-2.4.5.ebuild:
  Marking qscintilla-python-2.4.5 ppc stable for bug 349607
