@@ -8,27 +8,27 @@ DIST QScintilla-gpl-2.4.6.tar.gz 2442792 RMD160 b48880e3e0fa0d285f04bf7ceb509f50
 DIST QScintilla-gpl-2.5.1.tar.gz 2638790 RMD160 4cd5eaf87d831fa77212494e19624308dbd00900 SHA1 ff8eb7c49c949109abc434650f4b8215757574bd SHA256 982a3ea9cd42cd2bad65cd88c2cbf47c55397983ab11a7101215bca466ff9ac4
 DIST QScintilla-gpl-2.6.1.tar.gz 2657005 RMD160 f3e3eeb0ffb30f0a388309d46874983ff0ef8e3d SHA1 c68dbeaafb4f5dbe0d8200ae907cced0c7762e19 SHA256 34b7052b820dfedd4af897d6865d94e81a7aeb7f037f70f5516e9b0ea88afb63
 DIST QScintilla-gpl-2.6.tar.gz 2655263 RMD160 5a04e13b2642d5611b15e4a1e49a3021f5dc25f3 SHA1 f55dfc6804b2140a5c3e69bd85eb64caa1a5c2ce SHA256 21bc3c0b970935c5d45ea2493e629ea3740b0290be43fed37bb389c94aaa1f41
-EBUILD qscintilla-python-2.4.5.ebuild 1355 RMD160 bc6e579fd02904a15a1d3f9f8ee2ab0cb8fe3a78 SHA1 ed48d96e431c40f5450aef955a6592c525429fe9 SHA256 e4177dacb64072624d40f0631eb1d87b63c76fe3bfb05eb1b6fb8f064cdfe2eb
-EBUILD qscintilla-python-2.4.6.ebuild 1387 RMD160 64e648cefbc8229bd013fb0478ca42455c72824d SHA1 9f65e33c1bca4898d6397cf380ea2a49a7f2c9d2 SHA256 c702aee66954ead84c1ef72a8eb2d8638a42dc1bf8c014922bc56409095dc6a5
-EBUILD qscintilla-python-2.5.1.ebuild 1388 RMD160 725ef5fc23fb1dd02a80ec0177dc13801ad1f475 SHA1 0fb21a90f0792e26083222708a36b924ffb94133 SHA256 368513e510bf7856c531dd8b502dd5146fb1a4ad94f0e69c9b0bf953ac33852b
-EBUILD qscintilla-python-2.6.1.ebuild 1400 RMD160 d82f37c6b53aed31fe8058b5626d2fc4878e7111 SHA1 9f90b823fe6688114a6394ca968a59375e105179 SHA256 d98e3f00e730d13f87342b950b31dd6707900ee5bd7cf36f462c6f5d412b5e42
-EBUILD qscintilla-python-2.6.ebuild 1397 RMD160 ef292fd0269dfa085af371c942dbc1666daa951f SHA1 50746d3c922fe3a3b2e1d0362c467aa26f8e334d SHA256 b5e3cdfcd9f0f1aae00cf238f050f222e96d149f141d16c64affa4a6fb9d453d
-MISC ChangeLog 11675 RMD160 b88d61a6232e6cd970f681a0a84012cf8240fc39 SHA1 cd8c7ad907a2d174d5c61e9148d5291c2439f562 SHA256 8b3a7ee5355a91da4722f6fbb192e4ce4809216ecea018b8d10595cdd09b4d0a
+EBUILD qscintilla-python-2.4.5.ebuild 1342 RMD160 74428b1c9b458acde77c19c0e888d898d1ea0faf SHA1 6a10855fcc2e66d15481067eeeb495eb8040242f SHA256 60e1bc9151cc7015ff02ae067faceae9902a904cd46f01a80f0f32564364d73e
+EBUILD qscintilla-python-2.4.6.ebuild 1374 RMD160 b6a34cf2187230a39f9df788ee886031b530eaf1 SHA1 96c39ed4179e317c7c408fcab4350a2697e87f7f SHA256 b1ec0195c861799d3d06743df17511941cb4e82f6e3690ab1467a1cc93f0836e
+EBUILD qscintilla-python-2.5.1.ebuild 1375 RMD160 34c29d246e382bf3f6c80acf2efbdcbe69de7740 SHA1 cfec131a0970083343b8f8d0a6e789cefb8ecb10 SHA256 f4176390140f9d8b9a0f05827ccb44fecc18859f033261d744c833aae3298f85
+EBUILD qscintilla-python-2.6.1.ebuild 1386 RMD160 75d7005c487dcc70bffdc572376d48799ea3e3c4 SHA1 024c17391c43abc1b9cc395c2116319b4e58eed7 SHA256 52a88da4efa611fcb015b0deb35fdcddd4279df498be596078339e041266e7b4
+EBUILD qscintilla-python-2.6.ebuild 1384 RMD160 97006c74a449b34950485d5fa256a685f8c7a640 SHA1 0f9c9779fc311ecf634ef6e90e3cc0efbc259451 SHA256 3eafc7f3c2a41204d2f946d3dd23ce25f70f9126097ce9c677f0cd7d918e6a84
+MISC ChangeLog 11951 RMD160 52a6ff81cd09943a3b9d01beb97692402227e8e6 SHA1 d5e0589cc51c919fec952305ff8415f2f2bace7f SHA256 b8e27544627b744aa68a492ac8e2a479bd0826031ae933aeebc8a1667e6ef6fd
 MISC metadata.xml 387 RMD160 c113f8da5e31dea442f5f83037fba061a4b7fc0d SHA1 47e59b857377c7f13c348c1ab809d1fbba28e84d SHA256 61ea93c0d748d8192fe9abdd96998b5ea111d1bfecbed8de48ad8ab4716817aa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPU6ZrAAoJEPqDWhW0r/LCWMUQAJfvRxrIM9+38KHBj6AmHVqB
-VtT2yblxq4H4PLEfq0k4frLrSJ/Jk8glQarUcdm8BRM34vhmkCDmGN6V4FLVOGym
-LS1JXf+GePFoFoMtwi8Ri4yYCOV/vSKOMrds69Bi9a1B0/+e8pGmsI1+ltmAiUy4
-hsZgL+IYcdfjM5gEUadxMujhjCh6uwUDNrpAK5tHHhbxzi0vUem9qaJA+e2JgyUp
-OagNIQEmIUiJ3P7CD+VsWC/OCzgEAo+a75sf4JnfiGss9e4wPWArz+UNrlEroVgF
-LlM0kRao/ohsY26yHPfbzEF82gnGhWcIRmw43jeb7FCFe1tlhOt7TuXbhNyYfcab
-82IJDXP5PRzZArre9qe6BmojyXRkKVtHUouruuEmTT/40soUkkX6NgJ7btoKGkH5
-QQn8TqVQy5ktu5PGp9gsEqPYrzYbTyB9lARcRUsZo40jSexOsraFXQzoXRR9jueY
-S715EVmysKrkqczB314Jz7vIXSCjGRLjvJN4R0LeNqG72xW/1Q4MB6110RZC5rZe
-BeGeYheij9VTu+EzPfBfclQZKp0GMvrZel9+6dNE4OlqF+CpoVhfgmaqY4ub1wzK
-pL1XOv5NtK4e0GfAf589Sb1dN40xTtZPunmXfiJ4Tur7OIQ6mTSyYDw+cVhU4XXz
-jUxHsmPrcrk4qOc83QR6
-=qKhr
+iQIcBAEBCgAGBQJPb1zyAAoJENXLsxwXqFxyIIgP/1sgAgyrALCKMd+fMc4uYqZG
+HNiDlmTohZoESxEF0fm7dH0J4dcgZRnQjLuvqxIiaXjSBRVYwiVtOE6KXyxgeSsO
+vl+WYelkmvO69ahIJEGompGnbkksKmRYJzDWVnPvWjp9ZE0Df6sWXXMSe7Uzfcn+
+jCOWhJ0TLiqbUkZpHB5LHyUmjj8loE5NDnWNtiBpDGSzeOk6Gb4Tzv8JoXCsAtW5
+Um8drgpqOywO+9LnD+NvD98PjkvN7+/15bcduM9eWu5w8rss5Opa3fRFZx2K3NH+
+14TlTP+mgkrBxHhM89lIBVXWR3Hy0Whjfjl433nCdZaon+6Vwk1zCO6cUAOOSkkz
+iriK7eKhOoMJYHlOPhtuHRNJ0Z5tQfR6fegxpHQMHtZRxNKyluQpK+vDt+yVrHpU
+caIvv7USGoA9yq3oE1HS8hl2qw5bLP+qRNkrTPprBLojTbB7IanviduBWLKcg4NA
+lJMd8F8hGWrtx06nry9uqL7aMrxTwj5W0u2iD1cgth3OrxsiYf3hhAWOfXzFGNHZ
+6kekuKlbW0vP8zsI8y/0PCy4AO53fqKgo8AgU6RpODDvJiiciQamxPY5Yy84xuu1
+i53bdNCq7Kp/WHb7KuD/stfylz+YyzotxvqUhRUiPGM0DVuN/p8H5TC1y21HxDrL
+wvTA61UqTuqSyelIfhZM
+=tzlc
 -----END PGP SIGNATURE-----
